レスポンシブ修正

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,17 @@ ul {
 
 p {
   box-sizing: border-box;
+  font-size: 16px;
+}
+@media screen and (min-width: 805px) {
+  p {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 1300px) {
+  p {
+    font-size: 36px;
+  }
 }
 
 .l-header {
@@ -52,16 +63,20 @@ p {
 .l-sidebar {
   position: absolute;
   height: 100%;
-  width: 30%;
+  width: 45%;
   z-index: 1000;
   top: 0;
   right: 0;
-  transition: all 0.6s;
 }
 .l-sidebar.nav {
   right: 0;
   transition: all 0.6s;
   background-color: #F99F48;
+}
+@media screen and (min-width: 1300px) {
+  .l-sidebar.nav {
+    right: 0;
+  }
 }
 
 .p-front__title {
@@ -74,7 +89,7 @@ p {
     font-size: 46px;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .p-front__title {
     font-size: 70px;
   }
@@ -93,7 +108,7 @@ p {
     height: 350px;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .p-front__top {
     background-image: url(../img/top.png);
     height: 500px;
@@ -122,7 +137,7 @@ p {
     padding: 1rem;
   }
 }
-@media screen and (min-width: 805px) and (min-width: 1162px) {
+@media screen and (min-width: 805px) and (min-width: 1300px) {
   .p-box--news {
     padding: 3rem;
   }
@@ -151,7 +166,7 @@ p {
     height: 308px;
   }
 }
-@media screen and (min-width: 805px) and (min-width: 1162px) {
+@media screen and (min-width: 805px) and (min-width: 1300px) {
   .p-box--menu__open {
     background-image: url(../img/open.png);
     height: 350px;
@@ -170,7 +185,7 @@ p {
     height: 308px;
   }
 }
-@media screen and (min-width: 805px) and (min-width: 1162px) {
+@media screen and (min-width: 805px) and (min-width: 1300px) {
   .p-box--menu__support {
     background-image: url(../img/support.png);
     height: 350px;
@@ -189,7 +204,7 @@ p {
     height: 308px;
   }
 }
-@media screen and (min-width: 805px) and (min-width: 1162px) {
+@media screen and (min-width: 805px) and (min-width: 1300px) {
   .p-box--menu__single {
     background-image: url(../img/Contact-pc.png);
     height: 350px;
@@ -205,7 +220,7 @@ p {
     padding: 1rem;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .p-box--menu--text {
     padding: 3rem;
   }
@@ -227,7 +242,7 @@ p {
   right: 8%;
   transition: all 0.6;
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .p-menu {
     display: flex;
     top: 10%;
@@ -291,7 +306,7 @@ footer .menu li {
     font-size: 40px;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .c-text--top a {
     font-size: 48px;
   }
@@ -306,7 +321,7 @@ footer .menu li {
     font-size: 24px;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .c-text--tel {
     font-size: 40px;
     padding: 7px 15px 0 120px;
@@ -323,7 +338,7 @@ footer .menu li {
     padding: 0 0 0 200px;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .c-text--sub {
     font-size: 20px;
     padding: 0 0 0 315px;
@@ -341,7 +356,7 @@ footer .menu li {
 .c-button {
   height: 70px;
   width: 70px;
-  position: fixed;
+  position: absolute;
   top: 28px;
   right: 0;
 }
@@ -358,7 +373,7 @@ footer .menu li {
   display: block;
   position: relative;
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .c-line {
     display: none;
   }
@@ -376,6 +391,10 @@ footer .menu li {
 
 .c-shadow {
   text-shadow: 2px 2px 0 #000;
+}
+
+.c-noscroll {
+  overflow: hidden;
 }
 
 .u-padding10 {
@@ -398,7 +417,7 @@ footer .menu li {
     font-size: 24px;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .u-font-size {
     font-size: 36px;
   }
@@ -411,7 +430,7 @@ footer .menu li {
     font-size: 36px;
   }
 }
-@media screen and (min-width: 1162px) {
+@media screen and (min-width: 1300px) {
   .u-font-size__main {
     font-size: 42px;
   }
