--- a/sass/object/component/_button.scss
+++ b/sass/object/component/_button.scss
@@ -6,7 +6,7 @@
 .c-button {
     height: 70px;
     width: 70px;
-    position: fixed;
+    position: absolute;
     top: 28px;
     right: 0;
     :nth-child(2) {
