--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,6 +33,7 @@
 @use "object/component/line";
 @use "object/component/position";
 @use "object/component/shadow";
+@use "object/component/noscroll";
 
 /*utility*/
 @use "object/utility/padding10";
