--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -8,14 +8,16 @@
 .l-sidebar {
     position: absolute;
     height: 100%;
-    width: 30%;
+    width: 45%;
     z-index: 1000;
     top:0;
     right: 0;
-    transition: all 0.6s;
     &.nav {
         right: 0;
         transition: all 0.6s;
         background-color: #F99F48;
+        @include m.mq (pc) {
+                right: 0;
+        }
     }
 }
