--- a/sass/object/component/_button.scss
+++ b/sass/object/component/_button.scss
@@ -7,7 +7,7 @@
     height: 70px;
     width: 70px;
     position: absolute;
-    top: 28px;
+    top: 10%;
     right: 0;
     :nth-child(2) {
         margin: 15px 0 15px 0;
