--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,4 +41,5 @@
 @use "object/utility/margin20";
 @use "object/utility/font-size";
 @use "object/utility/padding";
-@use "object/utility/_thumbnail.scss";
+@use "object/utility/thumbnail";
+@use "object/utility/contact";
