--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,3 +43,4 @@
 @use "object/utility/padding";
 @use "object/utility/thumbnail";
 @use "object/utility/contact";
+@use "object/utility/boxmargin";
