--- a/sass/object/project/_wp.scss
+++ b/sass/object/project/_wp.scss
@@ -40,6 +40,9 @@ div #wpadminbar {
     position:  fixed;
 }
 
-label #text {
-    text-align: left;
+// label #text {
+//     text-align: left;
+// }
+.wpcf7-spinner{
+    display: block;
 }
