--- a/sass/object/utility/_contact.scss
+++ b/sass/object/utility/_contact.scss
@@ -23,6 +23,6 @@ input, textarea{
 
 .wpcf7-submit {
     background-color : orange;
-    width: 10%;
+    width: 100px;
     border-radius: 8px;
 }
